@@ -5,6 +5,7 @@ Update Print friendly with new changes
 Update title table for donor / sector budgets / transaction pages
 Remove total_spend td
 Added missing CSV download links for donor / sector activities
+Fixed font color for img alts
 
 
 Development Portal (2017-03-13 shi)
